--- a/content/_assets/images/tables/table-63-1.html
+++ b/content/_assets/images/tables/table-63-1.html
@@ -1,7 +1,7 @@
 <table>
 <caption>
  <strong>Table 63.1</strong><br />
- <strong>Cl concentration of a blotting paper after it was used for desalination process of <em>Prologue “Thinking in a Black Field”</em> (right side)</strong>
+ <strong>Cl concentration of a blotting paper after it was used for desalination process of <em>Prologue: “Thinking in a Black Field”</em> (right side)</strong>
 </caption>
 <thead>
   <tr>
@@ -18,32 +18,32 @@
 
  <tr>
  <td>Point 1</td>
- <td>&amp;gt;627</td>
- <td>&amp;gt;627</td>
+ <td>>627</td>
+ <td>>627</td>
  <td>217</td>
  <td>43</td>
- <td>&amp;lt;30</td>
- <td>&amp;lt;30</td>
+ <td>&#60;30</td>
+ <td>&#60;30</td>
  </tr>
 
  <tr>
  <td>Point 2</td>
- <td>&amp;gt;627</td>
+ <td>>627</td>
  <td>404</td>
  <td>104</td>
  <td>58</td>
- <td>&amp;lt;30</td>
- <td>&amp;lt;30</td>
+ <td>&#60;30</td>
+ <td>&#60;30</td>
  </tr>
 
  <tr>
  <td>Point 3</td>
- <td>&amp;gt;627</td>
+ <td>>627</td>
  <td>376</td>
  <td>151</td>
  <td>66</td>
  <td>58</td>
- <td>&amp;lt;30</td>
+ <td>&#60;30</td>
  </tr>
 
  </tbody>
