--- a/content/_assets/images/tables/table-63-2.html
+++ b/content/_assets/images/tables/table-63-2.html
@@ -9,10 +9,10 @@
     <th>Process</th>
     <th>Condition</th>
     <th>Date of work</th>
-    <th>Short side length (weft) (mm)</th>
+    <th>Short-side length (weft) (mm)</th>
     <th>Expansion and contraction (mm)</th>
     <th>Rate of change (%)*<em><sup></sup></em></th>
-    <th>Long side length (warp) (mm)</th>
+    <th>Long-side length (warp) (mm)</th>
     <th>Expansion and contraction (mm)</th>
     <th>Rate of change (%)</th>
   </tr>
@@ -122,7 +122,7 @@
 </table>
 
 <div class="table-key">
-  <p>* Rate of change in dimension before treatments</p>
+  <p>*Rate of change in dimension before treatments.</p>
 
-  <p><sup>†</sup> 1 hour after drying by exchanging blotting paper three times</p>
+  <p><sup>†</sup>1 hour after drying by exchanging blotting paper three times.</p>
 </div>
