--- a/content/_assets/images/tables/table-63-3.html
+++ b/content/_assets/images/tables/table-63-3.html
@@ -9,10 +9,10 @@
     <th>Process</th>
     <th>Condition</th>
     <th>Date of Work</th>
-    <th>Short side length (weft) (mm)</th>
+    <th>Short-side length (weft) (mm)</th>
     <th>Expansion and contraction (mm)</th>
     <th>Rate of change (%)<sup>*</sup></th>
-    <th>Long side length (warp) (mm)</th>
+    <th>Long-side length (warp) (mm)</th>
     <th>Expansion and Contraction (mm)</th>
     <th>Rate of change (%)</th>
   </tr>
