--- a/content/_assets/images/tables/table-27-3.html
+++ b/content/_assets/images/tables/table-27-3.html
@@ -37,7 +37,7 @@
     <ul>
       <li>Aqueous or water + ethanol (50:50) dispersions</li>
       <li><strong>Mode of application:</strong> spraying (preferred) or brushing</li>
-      <li><strong>Bulk penetration </strong> if used at low concentration (<4.5% w/w)</li>
+      <li><strong>Bulk penetration </strong> if used at low concentration (&#60;4.5% w/w)</li>
       <li><strong>Reinforcement</strong> provided at low weight added (8.6%); higher reinforcement but lower elongation at break and breaking force than CNF-treated sample when tested on a modern degraded cotton canvas</li>
     </ul>
   </td>
