fix table credit

--- a/content/_assets/images/tables/table-27-1.html
+++ b/content/_assets/images/tables/table-27-1.html
@@ -136,4 +136,6 @@
   <p>Sources: Solution 1—spray preparation: Nechyporchuk et al. 2018; brush preparation: Bridarolli et al. 2020. Solution 2—preparation: Bridarolli 2019. Solution 3—preparation and data: [[Kolman et al. 2018]].</p>
 
   <p><sup>*</sup>The stiffness (Young’s modulus) reported for solutions 1 and 2 samples was measured in the region of interest (0%–2% elongation). The data shown for solution 3 were taken from Kolman et al. 2018 and Young’s moduli calculated from the beginning of the curves (0%-4% elongation).</p>
+
+  <p>Table: Alexandra Bridarolli</p>
 </div>
