--- a/content/_assets/images/tables/table-35-1.html
+++ b/content/_assets/images/tables/table-35-1.html
@@ -101,4 +101,5 @@
 
 <div class="table-key">
   <p>a. One 17th-century and one 19th-century painting had both lining and reinforcing patches.</p>
+  <p>Table: Dominique Martos-Levif</p>
 </div>
