fix table caption

--- a/content/_assets/images/tables/table-51-3.html
+++ b/content/_assets/images/tables/table-51-3.html
@@ -154,4 +154,5 @@
 
 <div class="table-key">
   <p>Note: Tested using ASTM D1876-01 standard; T-type specimens in Shimadzu universal testing machine, 1 kN load cell.</p>
+  <p>Table: Courtesy of the research team</p>
 </div>
