--- a/content/_assets/images/tables/table-51-2.html
+++ b/content/_assets/images/tables/table-51-2.html
@@ -76,4 +76,5 @@
 
 <div class="table-key">
   <p>Note: O = open, C = closed, A = aged, U = unaged.</p>
+  <p>Table: Courtesy of the research team</p>
 </div>
