Fix table captions / credits

--- a/content/_assets/images/tables/table-11-1.html
+++ b/content/_assets/images/tables/table-11-1.html
@@ -53,4 +53,5 @@
 </table>
 <div class="table-key">
   <p>Source: Orata 2009. Used with permission.</p>
+  <p>Table: Barbara Lavorini and Luigi Orata</p>
 </div>
