--- a/content/_assets/images/tables/table-17-1.html
+++ b/content/_assets/images/tables/table-17-1.html
@@ -164,4 +164,5 @@
 
 <div class="table-key">
   <p>Note: Each case study painting represents a different historical lining recipe (SAAM 1–6). The third column compares each case study to surveyed lining adhesives, prevalence of its use on other works by the same artist, and prevalence of its use with the same secondary support. The breakdown of secondary supports is as follows: linen (10/50 linings), fiberglass (18/50 linings), combination of linen and fiberglass (3/50 linings), and unidentified textiles (19/50 linings). Supports for <em>Cagnes-sur-Mer</em>, <em>The Lesson</em>, and <em>The Windmill</em> were unidentified in April 2019; visual examination later revealed that all three supports were linen.</p>
+  <p>Table: Amber Kerr, Gwen Manthey, Keara Teeter, Kristin DeGhetaldi, Brian Baade, W. Christian Petersen, and Catherine Matsen</p>
 </div>
