--- a/content/_assets/images/tables/table-21-1.html
+++ b/content/_assets/images/tables/table-21-1.html
@@ -50,4 +50,5 @@
 <div class="table-key">
   <p>Source: Mehra 1972 (verbatim).<br />
   *<em>Relining</em> means lining; see Andersen 2012.</p>
+  <p>Table: Cecil Krarup Andersen</p>
 </div>
