--- a/content/_assets/images/tables/table-3-2.html
+++ b/content/_assets/images/tables/table-3-2.html
@@ -19,4 +19,5 @@
 </table>
 <div class="table-key">
   <p>Source: Scharff 1980, 1:23.</p>
+  <p>Table: © Mikkel Scharff, Institute of Conservation, The Royal Danish Academy</p>
 </div>
