--- a/content/_assets/images/tables/table-56-1.html
+++ b/content/_assets/images/tables/table-56-1.html
@@ -176,4 +176,5 @@
 
 <div class="table-key">
   <p>Note: FTIR was done by Cristina Carșote.</p>
+  <p>Table: Cristina Carșote and Filip A. Petcu</p>
 </div>
