--- a/content/_assets/images/tables/table-56-2.html
+++ b/content/_assets/images/tables/table-56-2.html
@@ -147,4 +147,6 @@
   <p>*1 part by weight of Aquazol 500 (20%) solution in 4:1 of isopropanol to deionized water, plus 1 part by weight nanocellulose (1%) in deionized water.</p>
 
   <p>Abbreviations: BAC = butyl acetate; CNC = cellulose nanocrystals; DIW = deionized water; IMS = industrial methylated spirits; IP = isopropanol</p>
+
+  <p>Table: Filip A. Petcu</p>
 </div>
