--- a/content/_assets/images/tables/table-56-3.html
+++ b/content/_assets/images/tables/table-56-3.html
@@ -340,4 +340,5 @@ Curtea, Timiș county</td>
 </table>
 <div class="table-key">
   <p>Abbreviations: MBT = Museum of the Orthodox Archdiocese of Timișoara; MArT= Timișoara Museum of Art; Private = private collection. This table details the banners and epitaphs in the study shown in fig. 56.1.</p>
+  <p>Table: Filip A. Petcu</p>
 </div>
