--- a/content/_assets/images/tables/table-59-1.html
+++ b/content/_assets/images/tables/table-59-1.html
@@ -190,4 +190,5 @@
 
 <div class="table-key">
   <p>*The approximate maximum force between two magnets when they are in direct contact.</p>
+  <p>Table: Emanuel Sterp Moga</p>
 </div>
