--- a/content/_assets/images/tables/table-59-2.html
+++ b/content/_assets/images/tables/table-59-2.html
@@ -150,4 +150,5 @@
 <div class="table-key">
   <p>*RH was varied from 50% to 80%</p>
   <p><sup>†</sup>20 × 10 × 2 mm</p>
+  <p>Table: Emanuel Sterp Moga</p>
 </div>
