--- a/content/_assets/images/tables/table-11-2.html
+++ b/content/_assets/images/tables/table-11-2.html
@@ -98,4 +98,5 @@
   Adhesion by vacuum bag (700 mbar) and constant heat for 10 min at different temperatures.<br />
   W = Weak, S = Sufficient, G = Good, E = Excellent<br />
   Source: Orata and Capellaro 2013. Used with permission.</p>
+  <p>Table: Barbara Lavorini and Luigi Orata</p>
 </div>
