--- a/content/_assets/images/tables/table-17-2.html
+++ b/content/_assets/images/tables/table-17-2.html
@@ -54,4 +54,5 @@
 </table>
 <div class="table-key">
   <p>Note: Each ingredient is identified by the presence of specific compounds at a particular molecular weight (m/z). GC/MSD seemed to have difficulty detecting microcrystalline wax (particularly when beeswax was present in the recipe) as well as the proprietary resins Zonarez B-85 and Piccolyte S-85 (not listed in table).</p>
+  <p>Table: Amber Kerr, Gwen Manthey, Keara Teeter, Kristin DeGhetaldi, Brian Baade, W. Christian Petersen, and Catherine Matsen</p>
 </div>
