--- a/content/_assets/images/tables/table-17-3.html
+++ b/content/_assets/images/tables/table-17-3.html
@@ -32,5 +32,6 @@
 
 <div class="table-key">
   <p>Note: Both Zonarez B-85 and Piccolyte S-85 were identified by the presence of the acid-catalyzed dimerization and trimerization of limonene.</p>
+  <p>Table: Amber Kerr, Gwen Manthey, Keara Teeter, Kristin DeGhetaldi, Brian Baade, W. Christian Petersen, and Catherine Matsen</p>
 </div>
 
