--- a/content/_assets/images/tables/table-3-1.html
+++ b/content/_assets/images/tables/table-3-1.html
@@ -84,4 +84,5 @@
   <p>Sources:</p>
   <p>* Scharff 1980, 1: 23.</p>
   <p><sup>†</sup> Compiled by students based on Hacke 1976, Hacke 1978, and the 1979 seminar given by Hacke. (Translated from Danish by the author.)</p>
+  <p>Table: © Mikkel Scharff, Institute of Conservation, The Royal Danish Academy</p>
 </div>
