--- a/content/_assets/images/tables/table-35-3.html
+++ b/content/_assets/images/tables/table-35-3.html
@@ -244,4 +244,6 @@
   <p>c. One 17th-century and one 19th-century painting had both lining and patches. These paintings are not included in the totals for “Minor or no structural intervention.” </p>
 
   <p>d. Paintings whose past lining were kept during the 2016–17 campaign and had no new structural intervention are included in the “No structural intervention” category in 2016–17.</p>
+  
+  <p>Table: Dominique Martos-Levif</p>
 </div>
