Edits to tables 3.1 and 4.1

--- a/content/_assets/tables/table-3-1.html
+++ b/content/_assets/tables/table-3-1.html
@@ -62,7 +62,7 @@
  <tr>
  <td><strong>9</strong></td>
  <td> </td>
- <td>Increase of weight as a result of the conservation treatment should be minimal./td>
+ <td>Increase of weight as a result of the conservation treatment should be minimal.</td>
  </tr>
 
  <tr>
