--- a/content/_assets/tables/table-4-1.html
+++ b/content/_assets/tables/table-4-1.html
@@ -105,7 +105,7 @@
  </tr>
 
  <tr>
- <td><em>HMS</em>Dido, Ajax <em>and </em>Orion <em>in Action off Crete, 21 May 1941</em> Rowland Langmaid, mid-20th century</td>
+ <td><em>HMS </em>Dido, Ajax <em>and </em>Orion <em>in Action off Crete, 21 May 1941</em>, Rowland Langmaid, mid-20th century</td>
  <td>BHC0678</td>
  <td>Royal Museums Greenwich, National Maritime Museum Collection</td>
  <td>1973</td>
