Edits to paper 21
and table

--- a/content/_assets/tables/table-21-1.html
+++ b/content/_assets/tables/table-21-1.html
@@ -6,37 +6,37 @@
 <tbody>
 <tr>
  <td>1.</td>
- <td>Whatever the nature of the materials used, they should remain fully reversible with regard to additional relining eventually needed in the future;</td>
+ <td>Whatever the nature of the materials used, they should remain fully reversible with regard to additional relining eventually needed in the future</td>
  </tr>
 
  <tr>
  <td>2.</td>
- <td>Relining* may not in anyway cause alterations in the structural character of a painting;</td>
+ <td>Relining* may not in anyway cause alterations in the structural character of a painting</td>
  </tr>
 
  <tr>
  <td>3.</td>
- <td>The materials used should have passed the selection in direct reference to the specific problems of the painting involved;</td>
+ <td>The materials used should have passed the selection in direct reference to the specific problems of the painting involved</td>
  </tr>
 
  <tr>
  <td>4.</td>
- <td>Flexibility must be guaranteed for an unlimited period of time;</td>
+ <td>Flexibility must be guaranteed for an unlimited period of time</td>
  </tr>
 
  <tr>
  <td>5.</td>
- <td>The use of heat should be avoided altogether or must be considerably minimized;</td>
+ <td>The use of heat should be avoided altogether or must be considerably minimized</td>
  </tr>
 
  <tr>
  <td>6.</td>
- <td>Increase of weight as a result of relining should be minimal;</td>
+ <td>Increase of weight as a result of relining should be minimal</td>
  </tr>
 
  <tr>
  <td>7.</td>
- <td>The adhesive selected should not be allowed to permeate the canvas, ground and paintfilm alike. Instead, it should form only a film between old and new canvases;</td>
+ <td>The adhesive selected should not be allowed to permeate the canvas, ground and paintfilm alike. Instead, it should form only a film between old and new canvases</td>
  </tr>
 
  <tr>
