Edits to paper 40
Piper Hough Michalski

--- a/content/_assets/tables/table-40-1.html
+++ b/content/_assets/tables/table-40-1.html
@@ -69,7 +69,7 @@
  <td>Crack slightly raised</td>
  <td>Crack raised slightly higher; no surfacing</td>
  <td>Same as for slack painting</td>
- <td>Fig. 40.7</td>
+ <td>Figs. 40.4, 40.6, 40.7</td>
  </tr>
 
  <tr>
@@ -80,7 +80,7 @@
  <td>Crack slightly raised</td>
  <td>Crack still appears slightly raised; no surfacing</td>
  <td>Crack remains slightly raised; however, now with surfacing due to bending of strips; gradual slope</td>
- <td>Fig. 40.7</td>
+ <td>Figs. 40.4, 40.7</td>
  </tr>
 
  <tr>
@@ -102,7 +102,7 @@
  <td>Crack moderately raised</td>
  <td>Crack is moderately raised, height higher; no surfacing</td>
  <td>NA—not keyed out</td>
- <td>Fig. 40.7</td>
+ <td>Fig. 40.4</td>
  </tr>
 
  <tr>
@@ -113,7 +113,7 @@
  <td>Crack slightly raised; epoxy flowed intermittently into crack for greater height control, resulting in stitched appearance</td>
  <td>Crack moderately to fully raised; stitched appearance; no surfacing</td>
  <td>Cupping height is lower than in slack painting; stitched appearance; surfacing is present </td>
- <td>Fig. 40.7</td>
+ <td>Figs. 40.6, 40.7</td>
  </tr>
 
  <tr>
@@ -136,7 +136,7 @@
  <td>Crack was slightly raised; slight moating in sized area</td>
  <td>Crack is slightly to moderately raised; strong moating, no surfacing</td>
  <td>Crack approaches appearance of untreated; keying out removed appearance of moating; surfacing present</td>
- <td>Fig. 40.7</td>
+ <td>Figs. 40.6, 40.7</td>
  </tr>
 
  <tr>
@@ -182,7 +182,7 @@
  <td>Crack appeared moderately raised</td>
  <td>Crack appears moderately raised; no surfacing</td>
  <td>Crack appears moderately raised; no surfacing</td>
- <td>Fig. 40.7</td>
+ <td>Figs. 40.6, 40.7</td>
  </tr>
 
  </tbody>
