--- a/content/_assets/tables/table-21-1.html
+++ b/content/_assets/tables/table-21-1.html
@@ -41,7 +41,7 @@
 
  <tr>
  <td>8.</td>
- <td>It must be optional to use the selected adhesive in different degrees of cohesive strength and it is imperative that it will have proper resistance to fluctuations in temperature and humidity. It should be compatible with the other materials used for the relining which it serves.</td>
+ <td>It must be optional to use the selected adhesive in different degrees of cohesive strength and it is imperative that it will have proper resistance to fluctuations in temperature and humidity. It should be compatible with the other materials used for the relining which it serves</td>
  </tr>
 
  </tbody>
