Make type corrections

--- a/content/_assets/tables/table-51-1.html
+++ b/content/_assets/tables/table-51-1.html
@@ -3,7 +3,7 @@
  <strong>Table 51.1</strong><br />
  <strong>Materials tested</strong>
  <br /><br />
- <strong>Fabrics</strong>
+ <span style="font-weight: 700;">Fabrics</span>
 </caption>
 <thead>
   <tr>
@@ -36,7 +36,8 @@
 
 <table>
   <caption>
-   <strong>Glue</strong>
+  <br />
+  <span style="font-weight: 700;">Glue</span>
   </caption>
 <thead>
   <tr>
@@ -62,7 +63,8 @@
 
 <table>
   <caption>
-   <strong>Flours</strong>
+    <br />
+    <span style="font-weight: 700;">Flours</span>
   </caption>
 <thead>
   <tr>
